--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -34,22 +34,22 @@ jobs:
           FOLDER: out/html # The folder the action should deploy.
 
       
-      - name: Build PDF
-        uses: dita-ot/dita-ot-action@master
-        with:
-          install: |
-            # Run some arbitrary installation commands
-            apt-get update -q
-            apt-get install -qy --no-install-recommends nodejs
-            nodejs -v
+     # - name: Build PDF
+     #   uses: dita-ot/dita-ot-action@master
+     #   with:
+     #     install: |
+     #       # Run some arbitrary installation commands
+     #       apt-get update -q
+     #       apt-get install -qy --no-install-recommends nodejs
+     #       nodejs -v
 
             # Install plugins
-            dita install fox.jason.extend.css
-            dita install org.doctales.xmltask
-            dita install fox.jason.prismjs
-          build: |
-            # Use the dita command line
-            dita --project=.github/dita-ot/pdf.xml -o out -f pdf
+     #       dita install fox.jason.extend.css
+     #       dita install org.doctales.xmltask
+     #       dita install fox.jason.prismjs
+     #     build: |
+     #       # Use the dita command line
+     #       dita --project=.github/dita-ot/pdf.xml -o out -f pdf
       
       
 
