--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -44,6 +44,11 @@ jobs:
             # dita --project=.github/dita-ot/html.xml
             dita --project=.github/dita-ot/html_en.xml
           #project: .github/dita-ot/html.xml --generate.copy.outer=3
+          
+      - name: Download and install saxon
+        run: wget https://sourceforge.net/projects/saxon/files/Saxon-HE/10/Java/SaxonHE10-5J.zip/download && unzip download
+      - name: transform rules
+        run: java-jar saxon-he-10.5.jar -xsl:./de/xsl/ruleset.xsl -s:./de/trans/trFremdsprache.dita -o:./out/html/ruleset.json
       
       - name: Deploy HTML 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
