--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Build Bootstrap ⚙️
         uses: dita-ot/dita-ot-action@master
         with:
+          distribution: 'adopt' # See 'Supported distributions' for available options
+          java-version: '11'
           install: |
             apt-get update -q
             export DEBIAN_FRONTEND=noninteractive
