--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Set up JDK 1.8
         uses: joschi/setup-jdk@v2
+        with:
+          java-version: '11'
       - name: Git checkout
         uses: actions/checkout@v2
       - name: Build Bootstrap ⚙️
