--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -54,6 +54,8 @@ jobs:
       
       - name: Download and install saxon
         run: wget https://sourceforge.net/projects/saxon/files/Saxon-HE/10/Java/SaxonHE10-5J.zip/download && unzip download
+      - name: output dir
+        run: cd out && mkdir rules
       - name: transform rules
         run: java -jar saxon-he-10.5.jar -xsl:de/xsl/rules.xsl -s:de/trans/trFremdsprache.dita -o:out/rules/ruleset.json
       
