--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -58,7 +58,14 @@ jobs:
         run: mkdir rules
       - name: transform rules
         run: java -jar saxon-he-10.5.jar -xsl:de/xsl/rules.xsl -s:de/trans/trFremdsprache.dita -o:rules/ruleset.json
-      
+
+      - name: Deploy Rules 🚀
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages # The branch the action should deploy to.
+          FOLDER: rules # The folder the action should deploy.
+
       - name: Deploy HTML 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
