--- a/.github/workflows/new2.yml
+++ b/.github/workflows/new2.yml
@@ -22,10 +22,10 @@ jobs:
       - name: download DITA dtd
         run: cd de/xsl && wget https://github.com/oxygenxml/oxygen-dita-translation-package-builder-addon/archive/refs/heads/master.zip && unzip master.zip  
       
-      - name: Set up JDK 1.8
-        uses: joschi/setup-jdk@v2
-        with:
-          java-version: '11'
+      #- name: Set up JDK 1.8
+      #  uses: joschi/setup-jdk@v2
+      #  with:
+      #    java-version: '11'
       
       - name: Download and install saxon 
         run: wget https://www.saxonica.com/download/SaxonEE11-1J.zip && unzip SaxonEE11-1J.zip
