--- a/.github/workflows/new2.yml
+++ b/.github/workflows/new2.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: clone ocrd-wiki
-        run: git clone https://github.com/OCR-D/ocrd-website.wiki.git
+        run: git clone https://github.com/OCR-D/ocrd-website.wiki.git && mv ocrd-website.wiki de/ && cd de && ls
 
       - name: look for1
         run: ls  && java -version
