--- a/.github/workflows/new2.yml
+++ b/.github/workflows/new2.yml
@@ -28,42 +28,45 @@ jobs:
       - name: add wiki faq german
         run: java -jar saxon-ee-11.1.jar -xsl:de/xsl/wiki.xsl -catalog:de/xsl/oxygen-dita-translation-package-builder-addon-master/config/catalogs/catalog.xml -s:de/ocrd_ocrd.ditamap -o:de/ocrd_ocrd_wiki.ditamap
 
+      - name: add wiki faq german copy to out
+        run: java -jar saxon-ee-11.1.jar -xsl:de/xsl/wiki.xsl -catalog:de/xsl/oxygen-dita-translation-package-builder-addon-master/config/catalogs/catalog.xml -s:de/ocrd_ocrd.ditamap -o:out/rules/ocrd_ocrd_wiki.ditamap  
+
       - name: add wiki faq english
         run: java -jar saxon-ee-11.1.jar -xsl:de/xsl/wiki.xsl -catalog:de/xsl/oxygen-dita-translation-package-builder-addon-master/config/catalogs/catalog.xml -s:en/ocrd_ocrd.ditamap -o:en/ocrd_ocrd_wiki.ditamap  
 
-      - name: Build Bootstrap-german ⚙️
-        uses: dita-ot/dita-ot-action@master
-        with:
+      #- name: Build Bootstrap-german ⚙️
+      #  uses: dita-ot/dita-ot-action@master
+      #  with:
           #dita-ot-version: 3.7.0
-          install: |
-            apt-get update -q
-            export DEBIAN_FRONTEND=noninteractive
-            apt-get install -qy --no-install-recommends nodejs
-            nodejs -v
-          plugins: |
-             https://github.com/jason-fox/fox.jason.extend.css/archive/master.zip
-             https://github.com/infotexture/dita-bootstrap/archive/develop.zip
-             https://github.com/jason-fox/fox.jason.prismjs/archive/master.zip
-          build: |
-             dita --project=.github/dita-ot/html.xml
+      #    install: |
+      #      apt-get update -q
+      #      export DEBIAN_FRONTEND=noninteractive
+      #      apt-get install -qy --no-install-recommends nodejs
+      #      nodejs -v
+      #    plugins: |
+      #       https://github.com/jason-fox/fox.jason.extend.css/archive/master.zip
+      #       https://github.com/infotexture/dita-bootstrap/archive/develop.zip
+      #       https://github.com/jason-fox/fox.jason.prismjs/archive/master.zip
+      #    build: |
+      #       dita --project=.github/dita-ot/html.xml
             
           
           
-      - name: Build Bootstrap-english ⚙️
-        uses: dita-ot/dita-ot-action@master
-        with:
+      #- name: Build Bootstrap-english ⚙️
+      #  uses: dita-ot/dita-ot-action@master
+      #  with:
           #dita-ot-version: 3.7.0
-          install: |
-            apt-get update -q
-            export DEBIAN_FRONTEND=noninteractive
-            apt-get install -qy --no-install-recommends nodejs
-            nodejs -v
-          plugins: |
-            https://github.com/jason-fox/fox.jason.extend.css/archive/master.zip
-            https://github.com/infotexture/dita-bootstrap/archive/develop.zip
-            https://github.com/jason-fox/fox.jason.prismjs/archive/master.zip
-          build: |
-           dita --project=.github/dita-ot/html_en.xml
+      #    install: |
+      #      apt-get update -q
+      #      export DEBIAN_FRONTEND=noninteractive
+      #      apt-get install -qy --no-install-recommends nodejs
+      #      nodejs -v
+      #    plugins: |
+      #      https://github.com/jason-fox/fox.jason.extend.css/archive/master.zip
+      #      https://github.com/infotexture/dita-bootstrap/archive/develop.zip
+      #      https://github.com/jason-fox/fox.jason.prismjs/archive/master.zip
+      #    build: |
+      #     dita --project=.github/dita-ot/html_en.xml
           
             
       - name: output dir
