--- a/.github/workflows/new2.yml
+++ b/.github/workflows/new2.yml
@@ -24,24 +24,12 @@ jobs:
       
       - name: Download and install saxon 
         run: wget https://www.saxonica.com/download/SaxonEE11-1J.zip && unzip SaxonEE11-1J.zip
-
-      - name: output dir
-        run: cd out && sudo mkdir rules
-      - name: transform rules
-        run: java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trFremdsprache.dita -o:out/rules/ruleset_character.json &&
-             java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trLigaturen2.dita -o:out/rules/ruleset_ligature.json &&
-             java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trSilbentrennung.dita -o:out/rules/ruleset_hyphenation.json &&
-             java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/level_rom.dita -o:out/rules/ruleset_roman_digits.json
-             java -jar saxon-ee-11.1.jar -xsl:de/xsl/wiki.xsl -catalog:de/xsl/oxygen-dita-translation-package-builder-addon-master/config/catalogs/catalog.xml -s:de/ocrd_ocrd.ditamap -o:out/rules/ocrd_ocrd_wiki.ditamap
-
-
-
-
              
       - name: add wiki faq german
         run: java -jar saxon-ee-11.1.jar -xsl:de/xsl/wiki.xsl -catalog:de/xsl/oxygen-dita-translation-package-builder-addon-master/config/catalogs/catalog.xml -s:de/ocrd_ocrd.ditamap -o:de/ocrd_ocrd_wiki.ditamap
 
-      
+      - name: add wiki faq german copy to out
+        run: java -jar saxon-ee-11.1.jar -xsl:de/xsl/wiki.xsl -catalog:de/xsl/oxygen-dita-translation-package-builder-addon-master/config/catalogs/catalog.xml -s:de/ocrd_ocrd.ditamap -o:out/ocrd_ocrd_wiki.ditamap  
 
       - name: add wiki faq english
         run: java -jar saxon-ee-11.1.jar -xsl:de/xsl/wiki.xsl -catalog:de/xsl/oxygen-dita-translation-package-builder-addon-master/config/catalogs/catalog.xml -s:en/ocrd_ocrd.ditamap -o:en/ocrd_ocrd_wiki.ditamap  
@@ -81,14 +69,13 @@ jobs:
       #     dita --project=.github/dita-ot/html_en.xml
           
             
-      #- name: output dir
-      #  run: cd out && sudo mkdir rules
-      #- name: transform rules
-      #  run: java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trFremdsprache.dita -o:out/rules/ruleset_character.json &&
-      #       java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trLigaturen2.dita -o:out/rules/ruleset_ligature.json &&
-      #       java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trSilbentrennung.dita -o:out/rules/ruleset_hyphenation.json &&
-      #       java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/level_rom.dita -o:out/rules/ruleset_roman_digits.json
-      #       java -jar saxon-ee-11.1.jar -xsl:de/xsl/wiki.xsl -catalog:de/xsl/oxygen-dita-translation-package-builder-addon-master/config/catalogs/catalog.xml -s:de/ocrd_ocrd.ditamap -o:out/rules/ocrd_ocrd_wiki.ditamap
+      - name: output dir
+        run: cd out && sudo mkdir rules
+      - name: transform rules
+        run: java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trFremdsprache.dita -o:out/rules/ruleset_character.json &&
+             java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trLigaturen2.dita -o:out/rules/ruleset_ligature.json &&
+             java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/trSilbentrennung.dita -o:out/rules/ruleset_hyphenation.json &&
+             java -jar saxon-ee-11.1.jar -xsl:de/xsl/rules.xsl -s:de/trans/level_rom.dita -o:out/rules/ruleset_roman_digits.json
 
       
 
