--- a/.github/workflows/new2.yml
+++ b/.github/workflows/new2.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           input: de/md2dita.ditamap
           transtype: dita
-          output-path: ditaout
+          output-path: out
       
       
       
