--- a/.github/workflows/new2.yml
+++ b/.github/workflows/new2.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           install: |
             # Install plugins
-            dita install https://github.com/jason-fox/jason.fox.extend.css/archive/master.zip
+            dita install https://github.com/jason-fox/fox.jason.extend.css/archive/master.zip
             dita install https://github.com/infotexture/dita-bootstrap/archive/develop.zip
             dita install https://github.com/jason-fox/fox.jason.prismjs/archive/master.zip
           build: |
