--- a/.github/workflows/new2.yml
+++ b/.github/workflows/new2.yml
@@ -9,6 +9,15 @@ jobs:
     name: Build DITA
     runs-on: ubuntu-latest
     steps:
+
+      - name: install node
+        uses: actions/setup-node@v3
+        with:
+        node-version: 14
+        run: npm install
+        run: npm test
+
+
       
       - name: Git checkout
         uses: actions/checkout@v2
