--- a/.github/workflows/new2.yml
+++ b/.github/workflows/new2.yml
@@ -66,6 +66,7 @@ jobs:
         with:
           install: |
             apt-get update -q
+            export DEBIAN_FRONTEND=noninteractive
             apt-get install -qy --no-install-recommends nodejs
             nodejs -v
 
